--- a/simple-app/service.yml
+++ b/simple-app/service.yml
@@ -3,10 +3,11 @@ kind: Service
 metadata:
   name: simple-service
 spec:
-  type: LoadBalancer
+  #type: LoadBalancer
+  type: NodePort
   selector:
     app: trivial-go-web-app
   ports:
-      #- nodePort: 31000
-      - protocol: TCP
+      - nodePort: 31000
+        protocol: TCP
         port: 8080
