--- a/simple-app/service.yml
+++ b/simple-app/service.yml
@@ -3,11 +3,11 @@ kind: Service
 metadata:
   name: simple-service
 spec:
-  #type: LoadBalancer
-  type: NodePort
+  type: LoadBalancer
+  #type: NodePort
   selector:
     app: trivial-go-web-app
   ports:
-      - nodePort: 31000
-        protocol: TCP
+      - protocol: TCP
+        #nodePort: 31000
         port: 8080
